--- a/resources/assets/sass/components/list/_EntitiesList.scss
+++ b/resources/assets/sass/components/list/_EntitiesList.scss
@@ -117,9 +117,10 @@
     vertical-align: middle;
 
     & > span {
-      white-space: nowrap;
+      //white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      text-align: center;
     }
   }
 
